[gd_scene load_steps=98 format=3 uid="uid://cpeqsllkmhq1f"]

[ext_resource type="Shader" uid="uid://dqr0gxgowot00" path="res://scenes/menu/main_menu_bgmove.gdshader" id="1_vee4a"]
[ext_resource type="Script" uid="uid://c7vpbg7kb3v5e" path="res://scenes/menu/story_save_file_select.gd" id="1_yjogp"]
[ext_resource type="Texture2D" uid="uid://be8rdqp4gmevy" path="res://sprites/menu/main/mainmenu_background.png" id="2_rm6vu"]
[ext_resource type="AudioStream" uid="uid://cxsgbklkjwaml" path="res://bgm/menu/bgm_mainmenu.ogg" id="3_1gfxb"]
[ext_resource type="Texture2D" uid="uid://xg0dyn8yhxs8" path="res://sprites/menu/savemenu/SaveData_Buttons0001.png" id="4_hoxeu"]
[ext_resource type="Texture2D" uid="uid://c4ohu66hqvnry" path="res://sprites/menu/savemenu/SaveData_Buttons0002.png" id="5_yuxod"]
[ext_resource type="Texture2D" uid="uid://0awbxe2jptkw" path="res://sprites/menu/savemenu/SaveData_Buttons0003.png" id="6_55pj6"]
[ext_resource type="FontFile" uid="uid://bxhpix5tod03j" path="res://fonts/DK Harimau Dua.otf" id="7_t3pen"]
[ext_resource type="Texture2D" uid="uid://bi46r6scjddjr" path="res://sprites/menu/savemenu/SaveData_Buttons0004.png" id="8_6ajxe"]
[ext_resource type="Texture2D" uid="uid://8l1sonhl8i8t" path="res://sprites/menu/savemenu/SaveData_Buttons0005.png" id="9_310sm"]
[ext_resource type="Texture2D" uid="uid://joycgw16fcip" path="res://sprites/menu/savemenu/SaveData_Buttons0006.png" id="10_idf2x"]
[ext_resource type="Texture2D" uid="uid://crneupuwm5e53" path="res://sprites/menu/savemenu/SaveData_Buttons0007.png" id="11_7em04"]
[ext_resource type="Texture2D" uid="uid://wyqbla1bj3jb" path="res://sprites/menu/savemenu/SaveData_Buttons0008.png" id="12_42vr6"]
[ext_resource type="Texture2D" uid="uid://ovxvyqjmjoav" path="res://sprites/menu/savemenu/SaveData_Buttons0009.png" id="13_cfsdv"]
[ext_resource type="AudioStream" uid="uid://f3bgnu5jalut" path="res://sfx/menu/sfx_menu_select.ogg" id="14_4fesw"]
[ext_resource type="Texture2D" uid="uid://74ht0md3cy5r" path="res://sprites/menu/charselect/CharacterSelect_Bar.png" id="14_hmabd"]
[ext_resource type="AudioStream" uid="uid://c34txxvwhy20f" path="res://sfx/menu/sfx_menu_deselect.ogg" id="15_hw6of"]
[ext_resource type="Texture2D" uid="uid://qadbgs6qaxq4" path="res://sprites/menu/savemenu/savemenu_savefiletext (1).png" id="15_qtfnw"]
[ext_resource type="AudioStream" uid="uid://dlf2bwrdvr4wi" path="res://sfx/menu/sfx_menu_hover.ogg" id="16_ac4gh"]
[ext_resource type="Texture2D" uid="uid://6cm85nwo75gx" path="res://sprites/menu/savemenu/savemenu_savefiletext (2).png" id="16_ol3be"]
[ext_resource type="Texture2D" uid="uid://c2vmkoygkyhvk" path="res://sprites/menu/savemenu/savemenu_savefiletext (11).png" id="17_y3b0m"]
[ext_resource type="Texture2D" uid="uid://neqqkdv53re4" path="res://sprites/menu/savemenu/savemenu_savefiletext (12).png" id="18_6bibe"]
[ext_resource type="Texture2D" uid="uid://dehkjk2f7e0in" path="res://sprites/menu/savemenu/savemenu_savefiletext (13).png" id="19_wsbr0"]
[ext_resource type="Texture2D" uid="uid://d33ucn2v84m6e" path="res://sprites/menu/savemenu/savemenu_savefiletext (14).png" id="20_8s3wo"]
[ext_resource type="Texture2D" uid="uid://dlfsofl3okeap" path="res://sprites/menu/savemenu/savemenu_savefiletext (15).png" id="21_evtmj"]
[ext_resource type="Texture2D" uid="uid://b56lpa12t32k0" path="res://sprites/menu/savemenu/savemenu_savefiletext (16).png" id="22_13dn0"]
[ext_resource type="Texture2D" uid="uid://b2vjr304mpep5" path="res://sprites/menu/savemenu/savemenu_savefiletext (3).png" id="23_kient"]
[ext_resource type="Texture2D" uid="uid://ca462jta21om3" path="res://sprites/menu/savemenu/savemenu_savefiletext (4).png" id="24_yq40h"]
[ext_resource type="Texture2D" uid="uid://cmyuym6ea48a8" path="res://sprites/menu/savemenu/savemenu_savefiletext (5).png" id="25_q15au"]
[ext_resource type="Texture2D" uid="uid://c8jnmee0t2c25" path="res://sprites/menu/savemenu/savemenu_savefiletext (6).png" id="26_i8deq"]
[ext_resource type="Texture2D" uid="uid://iqlj00nb3irl" path="res://sprites/menu/savemenu/savemenu_savefiletext (7).png" id="27_0jdff"]
[ext_resource type="Texture2D" uid="uid://botl121tufg2d" path="res://sprites/menu/savemenu/savemenu_savefiletext (8).png" id="28_cm5y0"]
[ext_resource type="Texture2D" uid="uid://fv6gaimrv6b3" path="res://sprites/menu/savemenu/savemenu_savefiletext (9).png" id="29_dh4uk"]
[ext_resource type="Texture2D" uid="uid://c6fvt888siqep" path="res://sprites/menu/savemenu/savemenu_savefiletext (10).png" id="30_qgcrk"]
[ext_resource type="Texture2D" uid="uid://drywvhfbge66y" path="res://sprites/menu/charselect/button/CharSelect_Go0001.png" id="31_1juoh"]
[ext_resource type="Texture2D" uid="uid://iia6qntqgr6n" path="res://sprites/menu/charselect/button/CharSelect_Go0002.png" id="32_72umv"]
[ext_resource type="Texture2D" uid="uid://54rf8jc78gfe" path="res://sprites/menu/charselect/button/CharSelect_Go0003.png" id="33_ioovx"]
[ext_resource type="Texture2D" uid="uid://cha4b7h7m58u4" path="res://sprites/menu/charselect/button/CharSelect_Go_Select0001.png" id="34_1vhqr"]
[ext_resource type="Texture2D" uid="uid://crr4ws5esxgvi" path="res://sprites/menu/charselect/button/CharSelect_Go_Select0002.png" id="35_k6sry"]
[ext_resource type="Texture2D" uid="uid://dlobdp4wkqdli" path="res://sprites/menu/charselect/button/CharSelect_Go_Select0003.png" id="36_vtxwk"]
[ext_resource type="Texture2D" uid="uid://bb5gxvuuhtlgf" path="res://sprites/menu/charselect/button/CharSelect_Go_Hover0001.png" id="37_35t5l"]
[ext_resource type="Texture2D" uid="uid://t8yvpduxxy3l" path="res://sprites/menu/charselect/button/CharSelect_Go_Hover0002.png" id="38_820ds"]
[ext_resource type="Texture2D" uid="uid://dvtud2k2s0naq" path="res://sprites/menu/charselect/button/CharSelect_Go_Hover0003.png" id="39_rxf1m"]
[ext_resource type="Texture2D" uid="uid://di6x5dt3du6yx" path="res://sprites/menu/charselect/button/CharSelect_Back0001.png" id="40_kalhc"]
[ext_resource type="Texture2D" uid="uid://bx786hbhhwsof" path="res://sprites/menu/charselect/button/CharSelect_Back0002.png" id="41_rjrsa"]
[ext_resource type="Texture2D" uid="uid://bp26cwhocex8r" path="res://sprites/menu/charselect/button/CharSelect_Back0003.png" id="42_f5uo4"]
[ext_resource type="Texture2D" uid="uid://cu2kdox82vgxa" path="res://sprites/menu/charselect/button/CharSelect_Back_Select0001.png" id="43_uksq5"]
[ext_resource type="Texture2D" uid="uid://ddl546e3cowyo" path="res://sprites/menu/charselect/button/CharSelect_Back_Select0002.png" id="44_tb7pn"]
[ext_resource type="Texture2D" uid="uid://dxg4w51qngvbj" path="res://sprites/menu/charselect/button/CharSelect_Back_Select0003.png" id="45_0v3ta"]
[ext_resource type="Texture2D" uid="uid://dnn2sacq75n02" path="res://sprites/menu/charselect/button/CharSelect_Back_Hover0001.png" id="46_0d2lt"]
[ext_resource type="Texture2D" uid="uid://bnlyxuy2xm362" path="res://sprites/menu/charselect/button/CharSelect_Back_Hover0002.png" id="47_w37na"]
[ext_resource type="Texture2D" uid="uid://bqrjxjjvq0qku" path="res://sprites/menu/charselect/button/CharSelect_Back_Hover0003.png" id="48_hjc1h"]
[ext_resource type="Texture2D" uid="uid://c4hvwkahyonex" path="res://sprites/gameplay/dialouge_box/dialouge_box0001.png" id="52_ptrai"]
[ext_resource type="Texture2D" uid="uid://de52twdv764v1" path="res://sprites/gameplay/dialouge_box/dialouge_box0002.png" id="53_lno20"]
[ext_resource type="Texture2D" uid="uid://cqybgredqxyk7" path="res://sprites/gameplay/dialouge_box/dialouge_box0003.png" id="54_kdll7"]
[ext_resource type="FontFile" uid="uid://du43hv6y8bbqs" path="res://fonts/DK Garden Gnome.otf" id="55_gvg3e"]
[ext_resource type="Texture2D" uid="uid://dem0umycp2wyv" path="res://sprites/gameover/gameover_yes0001.png" id="56_1bady"]
[ext_resource type="Texture2D" uid="uid://cksoav75uuyup" path="res://sprites/gameover/gameover_yes0002.png" id="57_eaxfh"]
[ext_resource type="Texture2D" uid="uid://4tr62wj4ko0l" path="res://sprites/gameover/gameover_yes0003.png" id="58_vl1qh"]
[ext_resource type="Texture2D" uid="uid://d0m673bnacxul" path="res://sprites/gameover/gameover_yes0007.png" id="59_gdrj2"]
[ext_resource type="Texture2D" uid="uid://dcbp3qncgohgg" path="res://sprites/gameover/gameover_yes0008.png" id="60_6r3dn"]
[ext_resource type="Texture2D" uid="uid://df8vedvh0x4jp" path="res://sprites/gameover/gameover_yes0009.png" id="61_urh23"]
[ext_resource type="Texture2D" uid="uid://dsv51r0boa8sl" path="res://sprites/gameover/gameover_yes0004.png" id="62_13gbd"]
[ext_resource type="Texture2D" uid="uid://doimu1apg0ljk" path="res://sprites/gameover/gameover_yes0005.png" id="63_2w6fv"]
[ext_resource type="Texture2D" uid="uid://cxseewqy52am0" path="res://sprites/gameover/gameover_yes0006.png" id="64_5rgrs"]
[ext_resource type="Texture2D" uid="uid://d4nx36cxql7j1" path="res://sprites/gameover/gameover_no0001.png" id="65_iiqwj"]
[ext_resource type="Texture2D" uid="uid://bfw107x5mblmm" path="res://sprites/gameover/gameover_no0002.png" id="66_0l1gq"]
[ext_resource type="Texture2D" uid="uid://dkoxtuweebvj6" path="res://sprites/gameover/gameover_no0003.png" id="67_ytwbj"]
[ext_resource type="Texture2D" uid="uid://b7j70p8xclqgw" path="res://sprites/gameover/gameover_no0007.png" id="68_yj1vq"]
[ext_resource type="FontFile" uid="uid://chmsxxhquc4fw" path="res://fonts/DkCoolCrayon-xJyV.ttf" id="69_0suw5"]
[ext_resource type="Texture2D" uid="uid://clhwth2ghctqe" path="res://sprites/gameover/gameover_no0008.png" id="69_6xe8w"]
[ext_resource type="Texture2D" uid="uid://b1u0jf7bcuaou" path="res://sprites/gameover/gameover_no0009.png" id="70_eoq6l"]
[ext_resource type="Texture2D" uid="uid://c78u8vjiyhuph" path="res://sprites/gameover/gameover_no0004.png" id="71_34i3e"]
[ext_resource type="Texture2D" uid="uid://qgreytxl25fe" path="res://sprites/gameover/gameover_no0005.png" id="72_el6ep"]
[ext_resource type="Texture2D" uid="uid://b3ovfg2u5yb3x" path="res://sprites/gameover/gameover_no0006.png" id="73_v664p"]
[ext_resource type="Texture2D" uid="uid://csewpc4h20lau" path="res://sprites/ui/pause/PauseBG0001.png" id="74_yw45a"]
[ext_resource type="Texture2D" uid="uid://buy3cvpswnjpj" path="res://sprites/ui/pause/PauseBG0002.png" id="75_6ucym"]
[ext_resource type="Texture2D" uid="uid://diy12w5d4n4xx" path="res://sprites/ui/pause/PauseBG0003.png" id="76_0mapb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tanmp"]
shader = ExtResource("1_vee4a")

[sub_resource type="AnimatedTexture" id="AnimatedTexture_ca8j0"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("4_hoxeu")
frame_1/texture = ExtResource("5_yuxod")
frame_1/duration = 1.0
frame_2/texture = ExtResource("6_55pj6")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_drrbx"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("8_6ajxe")
frame_1/texture = ExtResource("9_310sm")
frame_1/duration = 1.0
frame_2/texture = ExtResource("10_idf2x")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_l01k6"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("11_7em04")
frame_1/texture = ExtResource("12_42vr6")
frame_1/duration = 1.0
frame_2/texture = ExtResource("13_cfsdv")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_r3xes"]
frames = 16
speed_scale = 8.0
frame_0/texture = ExtResource("15_qtfnw")
frame_1/texture = ExtResource("16_ol3be")
frame_1/duration = 1.0
frame_2/texture = ExtResource("23_kient")
frame_2/duration = 1.0
frame_3/texture = ExtResource("24_yq40h")
frame_3/duration = 1.0
frame_4/texture = ExtResource("25_q15au")
frame_4/duration = 1.0
frame_5/texture = ExtResource("26_i8deq")
frame_5/duration = 1.0
frame_6/texture = ExtResource("27_0jdff")
frame_6/duration = 1.0
frame_7/texture = ExtResource("28_cm5y0")
frame_7/duration = 1.0
frame_8/texture = ExtResource("29_dh4uk")
frame_8/duration = 1.0
frame_9/texture = ExtResource("30_qgcrk")
frame_9/duration = 1.0
frame_10/texture = ExtResource("17_y3b0m")
frame_10/duration = 1.0
frame_11/texture = ExtResource("18_6bibe")
frame_11/duration = 1.0
frame_12/texture = ExtResource("19_wsbr0")
frame_12/duration = 1.0
frame_13/texture = ExtResource("20_8s3wo")
frame_13/duration = 1.0
frame_14/texture = ExtResource("21_evtmj")
frame_14/duration = 1.0
frame_15/texture = ExtResource("22_13dn0")
frame_15/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_lvilu"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("40_kalhc")
frame_1/texture = ExtResource("41_rjrsa")
frame_1/duration = 1.0
frame_2/texture = ExtResource("42_f5uo4")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_swk83"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("43_uksq5")
frame_1/texture = ExtResource("44_tb7pn")
frame_1/duration = 1.0
frame_2/texture = ExtResource("45_0v3ta")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_wxd3n"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("46_0d2lt")
frame_1/texture = ExtResource("47_w37na")
frame_1/duration = 1.0
frame_2/texture = ExtResource("48_hjc1h")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_ou5q4"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("52_ptrai")
frame_1/texture = ExtResource("53_lno20")
frame_1/duration = 1.0
frame_2/texture = ExtResource("54_kdll7")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_ikjh5"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("56_1bady")
frame_1/texture = ExtResource("57_eaxfh")
frame_1/duration = 1.0
frame_2/texture = ExtResource("58_vl1qh")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_8e6mg"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("59_gdrj2")
frame_1/texture = ExtResource("60_6r3dn")
frame_1/duration = 1.0
frame_2/texture = ExtResource("61_urh23")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_7lqe0"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("62_13gbd")
frame_1/texture = ExtResource("63_2w6fv")
frame_1/duration = 1.0
frame_2/texture = ExtResource("64_5rgrs")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_gymcw"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("65_iiqwj")
frame_1/texture = ExtResource("66_0l1gq")
frame_1/duration = 1.0
frame_2/texture = ExtResource("67_ytwbj")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_d0yvs"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("68_yj1vq")
frame_1/texture = ExtResource("69_6xe8w")
frame_1/duration = 1.0
frame_2/texture = ExtResource("70_eoq6l")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_5pwve"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("71_34i3e")
frame_1/texture = ExtResource("72_el6ep")
frame_1/duration = 1.0
frame_2/texture = ExtResource("73_v664p")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_7a2ln"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("74_yw45a")
frame_1/texture = ExtResource("75_6ucym")
frame_1/duration = 1.0
frame_2/texture = ExtResource("76_0mapb")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_pmrao"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("31_1juoh")
frame_1/texture = ExtResource("32_72umv")
frame_1/duration = 1.0
frame_2/texture = ExtResource("33_ioovx")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_turyd"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("34_1vhqr")
frame_1/texture = ExtResource("35_k6sry")
frame_1/duration = 1.0
frame_2/texture = ExtResource("36_vtxwk")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_0cpjn"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("37_35t5l")
frame_1/texture = ExtResource("38_820ds")
frame_1/duration = 1.0
frame_2/texture = ExtResource("39_rxf1m")
frame_2/duration = 1.0

[node name="Story_SaveFileSelect" type="Node2D"]
script = ExtResource("1_yjogp")

[node name="MenuBG" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_tanmp")
offset_right = 1166.0
offset_bottom = 656.0
texture = ExtResource("2_rm6vu")
expand_mode = 1

[node name="MenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1gfxb")
autoplay = true
bus = &"bgm"

[node name="SaveFIleButtons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SaveFile1" type="TextureButton" parent="SaveFIleButtons"]
layout_mode = 0
offset_left = 224.0
offset_top = 176.0
offset_right = 432.0
offset_bottom = 439.0
texture_normal = SubResource("AnimatedTexture_ca8j0")
ignore_texture_size = true
stretch_mode = 0

[node name="SaveInfo" type="Label" parent="SaveFIleButtons/SaveFile1"]
texture_filter = 1
layout_mode = 0
offset_left = 16.0
offset_top = 272.0
offset_right = 196.0
offset_bottom = 312.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("7_t3pen")
theme_override_font_sizes/font_size = 40
text = "New Game"

[node name="SaveFile2" type="TextureButton" parent="SaveFIleButtons"]
layout_mode = 0
offset_left = 480.0
offset_top = 176.0
offset_right = 688.0
offset_bottom = 439.0
texture_normal = SubResource("AnimatedTexture_drrbx")
ignore_texture_size = true
stretch_mode = 0

[node name="SaveInfo" type="Label" parent="SaveFIleButtons/SaveFile2"]
texture_filter = 1
layout_mode = 0
offset_left = 16.0
offset_top = 272.0
offset_right = 196.0
offset_bottom = 312.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("7_t3pen")
theme_override_font_sizes/font_size = 40
text = "New Game"

[node name="SaveFile3" type="TextureButton" parent="SaveFIleButtons"]
layout_mode = 0
offset_left = 736.0
offset_top = 176.0
offset_right = 944.0
offset_bottom = 439.0
texture_normal = SubResource("AnimatedTexture_l01k6")
ignore_texture_size = true
stretch_mode = 0

[node name="SaveInfo" type="Label" parent="SaveFIleButtons/SaveFile3"]
texture_filter = 1
layout_mode = 0
offset_left = 16.0
offset_top = 272.0
offset_right = 196.0
offset_bottom = 312.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("7_t3pen")
theme_override_font_sizes/font_size = 40
text = "New Game"

[node name="BarBot" type="TextureRect" parent="."]
offset_left = -64.0
offset_top = 612.0
offset_right = 1211.0
offset_bottom = 667.0
texture = ExtResource("14_hmabd")
expand_mode = 1

[node name="BarTop" type="TextureRect" parent="."]
offset_left = -64.0
offset_top = -11.0
offset_right = 1211.0
offset_bottom = 80.0
texture = ExtResource("14_hmabd")
expand_mode = 1
flip_v = true

[node name="Text" type="TextureRect" parent="."]
offset_left = 256.0
offset_top = 16.0
offset_right = 903.0
offset_bottom = 80.0
texture = SubResource("AnimatedTexture_r3xes")
expand_mode = 1

[node name="BACK_Button" type="TextureButton" parent="."]
offset_left = 16.0
offset_top = 528.0
offset_right = 189.0
offset_bottom = 608.0
texture_normal = SubResource("AnimatedTexture_lvilu")
texture_pressed = SubResource("AnimatedTexture_swk83")
texture_hover = SubResource("AnimatedTexture_wxd3n")
ignore_texture_size = true
stretch_mode = 0

[node name="ButtonSounds" type="Node2D" parent="."]

[node name="Select" type="AudioStreamPlayer2D" parent="ButtonSounds"]
stream = ExtResource("14_4fesw")
bus = &"sfx"

[node name="Deselect" type="AudioStreamPlayer2D" parent="ButtonSounds"]
stream = ExtResource("15_hw6of")
bus = &"sfx"

[node name="Hover" type="AudioStreamPlayer2D" parent="ButtonSounds"]
stream = ExtResource("16_ac4gh")
bus = &"sfx"

[node name="NewGameScreen" type="Panel" parent="."]
visible = false
offset_right = 1166.0
offset_bottom = 656.0

[node name="MessageBG" type="TextureRect" parent="NewGameScreen"]
layout_mode = 0
offset_left = 272.0
offset_top = 176.0
offset_right = 870.0
offset_bottom = 445.0
texture = SubResource("AnimatedTexture_ou5q4")

[node name="MessageText" type="Label" parent="NewGameScreen/MessageBG"]
texture_filter = 1
layout_mode = 0
offset_left = 64.0
offset_top = 48.0
offset_right = 536.0
offset_bottom = 96.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("55_gvg3e")
theme_override_font_sizes/font_size = 20
text = "Are you sure you want to start this new save file?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DecisionButtons" type="Control" parent="NewGameScreen"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Yes_Button" type="TextureButton" parent="NewGameScreen/DecisionButtons"]
layout_mode = 0
offset_left = 656.0
offset_top = 336.0
offset_right = 790.0
offset_bottom = 400.0
texture_normal = SubResource("AnimatedTexture_ikjh5")
texture_pressed = SubResource("AnimatedTexture_8e6mg")
texture_hover = SubResource("AnimatedTexture_7lqe0")
ignore_texture_size = true
stretch_mode = 0

[node name="No_Button" type="TextureButton" parent="NewGameScreen/DecisionButtons"]
layout_mode = 0
offset_left = 368.0
offset_top = 336.0
offset_right = 494.0
offset_bottom = 400.0
texture_normal = SubResource("AnimatedTexture_gymcw")
texture_pressed = SubResource("AnimatedTexture_d0yvs")
texture_hover = SubResource("AnimatedTexture_5pwve")
ignore_texture_size = true
stretch_mode = 0

[node name="CurrentSaveScreen" type="Panel" parent="."]
visible = false
offset_right = 1166.0
offset_bottom = 656.0

[node name="InfoBG" type="TextureRect" parent="CurrentSaveScreen"]
layout_mode = 0
offset_left = 224.0
offset_top = 80.0
offset_right = 924.0
offset_bottom = 571.0
texture = SubResource("AnimatedTexture_7a2ln")

[node name="SaveName" type="Label" parent="CurrentSaveScreen/InfoBG"]
layout_mode = 0
offset_left = 208.0
offset_top = 96.0
offset_right = 469.0
offset_bottom = 156.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_t3pen")
theme_override_font_sizes/font_size = 60
text = "Save File 1"

[node name="CurrentWorld" type="Label" parent="CurrentSaveScreen/InfoBG"]
layout_mode = 0
offset_left = 128.0
offset_top = 200.0
offset_right = 315.0
offset_bottom = 233.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("69_0suw5")
theme_override_font_sizes/font_size = 28
text = "Current World:"

[node name="WorldText" type="Label" parent="CurrentSaveScreen/InfoBG"]
layout_mode = 0
offset_left = 384.0
offset_top = 192.0
offset_right = 569.0
offset_bottom = 231.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("69_0suw5")
theme_override_font_sizes/font_size = 28
text = "[CurrentWorld]"

[node name="Lives" type="Label" parent="CurrentSaveScreen/InfoBG"]
layout_mode = 0
offset_left = 240.0
offset_top = 256.0
offset_right = 306.0
offset_bottom = 289.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("69_0suw5")
theme_override_font_sizes/font_size = 28
text = "Lives:"

[node name="LivesCount" type="Label" parent="CurrentSaveScreen/InfoBG"]
layout_mode = 0
offset_left = 384.0
offset_top = 247.0
offset_right = 538.0
offset_bottom = 286.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("69_0suw5")
theme_override_font_sizes/font_size = 28
text = "[LivesCount]"

[node name="TriangleCollected" type="Label" parent="CurrentSaveScreen/InfoBG"]
layout_mode = 0
offset_left = 80.0
offset_top = 304.0
offset_right = 323.0
offset_bottom = 337.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("69_0suw5")
theme_override_font_sizes/font_size = 28
text = "Triangles Collected:"

[node name="TriAmount" type="Label" parent="CurrentSaveScreen/InfoBG"]
layout_mode = 0
offset_left = 384.0
offset_top = 304.0
offset_right = 416.0
offset_bottom = 343.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("69_0suw5")
theme_override_font_sizes/font_size = 28
text = "0"

[node name="TriMax" type="Label" parent="CurrentSaveScreen/InfoBG"]
layout_mode = 0
offset_left = 420.0
offset_top = 304.0
offset_right = 453.0
offset_bottom = 343.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("69_0suw5")
theme_override_font_sizes/font_size = 28
text = "/12"

[node name="GO_Button" type="TextureButton" parent="CurrentSaveScreen/InfoBG"]
layout_mode = 0
offset_left = 416.0
offset_top = 368.0
offset_right = 576.0
offset_bottom = 448.0
texture_normal = SubResource("AnimatedTexture_pmrao")
texture_pressed = SubResource("AnimatedTexture_turyd")
texture_hover = SubResource("AnimatedTexture_0cpjn")
ignore_texture_size = true
stretch_mode = 0

[node name="BACK_Button_Current" type="TextureButton" parent="CurrentSaveScreen"]
layout_mode = 0
offset_left = 368.0
offset_top = 448.0
offset_right = 541.0
offset_bottom = 528.0
texture_normal = SubResource("AnimatedTexture_lvilu")
texture_pressed = SubResource("AnimatedTexture_swk83")
texture_hover = SubResource("AnimatedTexture_wxd3n")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="SaveFIleButtons/SaveFile1" to="." method="_on_save_file_1_pressed"]
[connection signal="pressed" from="SaveFIleButtons/SaveFile2" to="." method="_on_save_file_2_pressed"]
[connection signal="pressed" from="SaveFIleButtons/SaveFile3" to="." method="_on_save_file_3_pressed"]
[connection signal="pressed" from="BACK_Button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="NewGameScreen/DecisionButtons/Yes_Button" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="NewGameScreen/DecisionButtons/No_Button" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="CurrentSaveScreen/InfoBG/GO_Button" to="." method="_on_go_button_pressed"]
[connection signal="pressed" from="CurrentSaveScreen/BACK_Button_Current" to="." method="_on_back_button_current_pressed"]
